fixes #9170 when column reordering in grid and high contrast mode is detected, use the default DnD icons which are low vision accessible. Updated default dnd to add generateText parameter so can turn off generation of text node in the icon. !strict
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@17403 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/grid/resources/Grid.css
+++ b/grid/resources/Grid.css
@@ -298,6 +298,12 @@
 .dojoxGrid .dojoDndItemAfter {
 	border-right-color: red;
 }
+.dijit_a11y .dojoDndItemBefore {
+	border-left: double;
+}
+.dijit_a11y .dojoDndItemAfter {
+	border-right: double;
+}
 .dojoxGridDndAvatarItem	td {
 	border: 1px solid;
 	border-color: #F6F4EB #ACA899 #ACA899 #F6F4EB;
